Added graph for better visuals

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <a class="skiplink" href="#map">Go to map</a>
     <div id="map" class="map" tabindex="0"></div>
 
+    <!-- <h1 id="forcast">Weather Forcast</h1> -->
+    <div class="chart-container">
+      <canvas id="myChart"></canvas>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
